[gd_scene load_steps=5 format=3 uid="uid://cvwrhusvho0yj"]

[ext_resource type="Script" path="res://scripts/enemy_selector.gd" id="1_vowwf"]
[ext_resource type="FontFile" uid="uid://bm5j2nihcrg82" path="res://assets/fonts/FantasyRPGtitle (size 11).ttf" id="2_7pdmm"]
[ext_resource type="FontFile" uid="uid://vbsmq6u2bioe" path="res://assets/fonts/PixelMiddle.ttf" id="3_uartq"]
[ext_resource type="FontFile" uid="uid://cjh41aoe31b8h" path="res://assets/fonts/PixelSmall.ttf" id="3_yl851"]

[node name="EnemySelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vowwf")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7pdmm")
theme_override_font_sizes/font_size = 64
text = "Choose your enemy!"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="PaginationContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="PrevButton" type="Button" parent="MainContainer/PaginationContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yl851")
theme_override_font_sizes/font_size = 32
text = "PREVIOUS"

[node name="PageLabel" type="Label" parent="MainContainer/PaginationContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uartq")
theme_override_font_sizes/font_size = 32

[node name="NextButton" type="Button" parent="MainContainer/PaginationContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yl851")
theme_override_font_sizes/font_size = 32
text = "NEXT"

[node name="SwapPages" type="Button" parent="MainContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7pdmm")
theme_override_font_sizes/font_size = 32
text = "Switch to Boss Selection"
